# smoltcp-C-interface

./: Cargo.toml  main.c  setup.sh  smoltcp.c  smoltcp.h  smoltcp_c_interface.rs  smoltcp_stack.rs
src/: lib.rs  packet_headers.rs  smoltcp_c_interface.rs  smoltcp_stack.rs  uknetdev_interface.rs
